BPER/DEVF/force-app/main/default/objects/CRM_PCA__c/CRM_PCA__c.object-meta.xml
<CustomObject>
    <label>PCA</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PCA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>