BPER/DEVF/force-app/main/default/objects/CRM_PCA__c/fields/CRM_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CRM_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PCA</relationshipLabel>
    <relationshipName>PCA</relationshipName>
    <type>Lookup</type>
</CustomField>