BPER/DEVF/force-app/main/default/objects/CRM_PCA__c/fields/CRM_Esito__c.field-meta.xml
<CustomField>
    <fullName>CRM_Esito__c</fullName>
    <label>Esito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Da ricontattare</fullName>
            </value>
            <value>
                <fullName>Presentazione PCA</fullName>
            </value>
            <value>
                <fullName>Monitoraggio piano</fullName>
            </value>
            <value>
                <fullName>Revisione piano</fullName>
            </value>
            <value>
                <fullName>Nuovo piano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>