BPER/DEVF/force-app/main/default/objects/CRM_PCA__c/fields/CRM_Note__c.field-meta.xml
<CustomField>
    <fullName>CRM_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>